--- a/test/fixtures/gym_classes.yml
+++ b/test/fixtures/gym_classes.yml
@@ -1,11 +1,16 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  schedule: 2024-12-19 23:05:18
+  name: Cardio Boot Camp
+  schedule: <%= Time.current + 2.days %>
   trainer: one
 
 two:
-  name: MyString
-  schedule: 2024-12-19 23:05:18
+  name: Strength Training
+  schedule: <%= Time.current + 3.days %>
   trainer: two
+
+three:
+  name: Yoga Flow
+  schedule: <%= Time.current + 4.days %>
+  trainer: three
