Configure for Railway deployment

--- a/config/database.yml
+++ b/config/database.yml
@@ -20,9 +20,13 @@ test:
   <<: *default
   database: storage/test.sqlite3
 
-# Production configuration for Render deployment
+# Production configuration for Railway deployment
 production:
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  url: <%= ENV['DATABASE_URL'] %>
+  database: <%= ENV['PGDATABASE'] %>
+  username: <%= ENV['PGUSER'] %>
+  password: <%= ENV['PGPASSWORD'] %>
+  host: <%= ENV['PGHOST'] %>
+  port: <%= ENV['PGPORT'] || '5432' %>
