--- a/railway.toml
+++ b/railway.toml
@@ -4,5 +4,6 @@ dockerfilePath = "Dockerfile"
 
 [deploy]
 healthcheckPath = "/health"
-healthcheckTimeout = 300
-restartPolicyType = "on_failure" 
+healthcheckTimeout = 600
+restartPolicyType = "on_failure"
+startupTimeout = 300 
