Add cable database configuration for production

--- a/config/database.yml
+++ b/config/database.yml
@@ -30,3 +30,17 @@ production:
   password: <%= ENV['PGPASSWORD'] %>
   host: <%= ENV['PGHOST'] %>
   port: <%= ENV['PGPORT'] || '5432' %>
+
+production_cable: &production_cable
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: <%= ENV['PGDATABASE'] %>
+  username: <%= ENV['PGUSER'] %>
+  password: <%= ENV['PGPASSWORD'] %>
+  host: <%= ENV['PGHOST'] %>
+  port: <%= ENV['PGPORT'] || '5432' %>
+
+cable:
+  production:
+    <<: *production_cable
