Fix secret key base handling

--- a/back4app.env.example
+++ b/back4app.env.example
@@ -3,7 +3,11 @@
 
 # Rails basic settings
 RAILS_ENV=production
-RAILS_MASTER_KEY=your_master_key_here
+# IMPORTANT: You must set ONE of these for your app to work!
+RAILS_MASTER_KEY=your_master_key_here  # Content of your config/master.key file (preferred)
+# OR
+SECRET_KEY_BASE=generated_secret_key   # If you don't have access to master.key, generate with `rails secret`
+
 RAILS_LOG_TO_STDOUT=true
 RAILS_SERVE_STATIC_FILES=true
 
